# background_img_generator

./: README.md  rename.py  rename_2.py  rosbag2image.py  rosbag2pos.py  rosbag2pos_robocup.py
bash/: reset-background-img-output.bash
rosbag2video/: CMakeLists.txt  package.xml
scripts/: rosbag2img.py
video2img/: CMakeLists.txt  README.md  package.xml
video2img/scripts/: rename.py  video2img.py
